=======
CHANGES
=======

1.5.4 (unreleased)
------------------

- Created report package with reportLink directive for registering reports.


1.5.3 (2010-11-24)
------------------

- Fixed Section meeting time misalignment in calendar (https://launchpad.net/bugs/611797)
- Added Bengali and Faroese translations, updated many others
- Added BooFieldDescription for boolean demographic fields
- Added limit_keys list to IFieldDescription and filter_key method to IDemographicsFields
- Created resource demographics and changed resource views to have demos


1.5.2 (2010-10-04)
------------------

- Activation of selected school year (https://launchpad.net/bugs/635160)
- Added "Add Multiple Persons" to Manage->Persons and "New Person" (for
  administration) to all other person views (https://launchpad.net/bugs/268127)
- Empty usernames no longer crash when adding a person (https://launchpad.net/bugs/644296)
- Replace access setting checkboxes with radio buttons (https://launchpad.net/bugs/638651)
- Fix security checks to let teachers edit learners and other section info
  if they have access rights.
- Add "View Person" action button in contact views (https://launchpad.net/bugs/635207)
- Update translations.

More info at https://launchpad.net/schooltool/+release/1.5.2


1.5.1 (2010-09-09)
------------------

- Tweaked WYSIWYG CK editor (https://launchpad.net/bugs/485446)
- Make CK editor work with servers under mod-rewrite (https://launchpad.net/bugs/258951)
- Update to work with latest ZTK (1.0a3)
- Renamed some classes and interfaces from Source to Vocabulary.
  This change is not backwards compatible, plugins may need updating.
- Added error checking on demographics edit form (https://launchpad.net/bugs/610870)
- Update translations.

More info at https://launchpad.net/schooltool/+release/1.5.1


1.5.0 (2010-07-13)
------------------

New features
++++++++++++

- Introduce minimalistic learning levels.
- Introduce versioned catalogs.