@@ -1,6 +1,6 @@
 <ul id="manage_menu">
-<li tal:repeat="viewlet options/viewlets">
-<span tal:replace="structure viewlet/render" />
-</li>
+  <li tal:repeat="viewlet options/viewlets">
+    <span tal:replace="structure viewlet/render" />
+  </li>
 </ul>
 
