@@ -5,7 +5,8 @@ CHANGES
 1.5.4 (unreleased)
 ------------------
 
-- Created report package with reportLink directive for registering reports.
+- Created report package with reportLink directive for registering reports
+  (https://launchpad.net/bugs/429588).
 
 
 1.5.3 (2010-11-24)
